sovereigntyai-temp/services/embeddings/k8s/embeddings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embeddings
  namespace: sovereignty-ai-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: embeddings
  template:
    metadata:
      labels:
        app: embeddings
    spec:
      containers:
        - name: embeddings
          image: image-registry.openshift-image-registry.svc:5000/sovereignty-ai-dev/embeddings:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /embeddings_data
              name: persistent-volume
              subPath: data/embeddings_data
            - mountPath: /shared_data
              name: persistent-volume
              subPath: data/shared_data
      restartPolicy: Always
      volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: persistent-volume-claim
  strategy:
    type: Recreate
