sovereigntyai-temp/services/embeddings/k8s/embeddings-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: embeddings-route
  namespace: sovereignty-ai-dev
spec:
  to:
    kind: Service
    name: embeddings-service
  port:
    targetPort: 8000
  wildcardPolicy: None
